@@ -24,6 +24,9 @@ format = %-4v %{YYYY-MM-dd}d
 
 [AutoPrereqs]
 
+[Prereqs / BuildRequires]
+Task::Weaken = 0
+
 [PkgDist]
 
 [PkgVersion]
