@@ -2,6 +2,8 @@ Revision history for Perl module Net::UPS
 ==============================================
 
 {{$NEXT}}
+   * weaken service ref in ::Rate in request_rate, this avoids a
+     circular reference and thus a memory leak
 
 0.08 2013-10-29
    * FIX RT #58402 added new Service Codes
